--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
   grid-template-columns: 3fr 1fr 1fr 1fr;
   column-gap: 0.5rem;
 }
+
 .cart-item {
   border-top: 1px solid rgb(177, 177, 177);
   padding: 1rem 0;
@@ -40,16 +41,10 @@
   max-width: 100%;
   margin-right: 1rem;
 }
-.cart-item .cart-product h3 {
+.cart-item .cart-product {
   font-weight: 400;
 }
-.cart-item .cart-product button {
-  border: none;
-  outline: none;
-  margin-top: 0.7rem;
-  cursor: pointer;
-  background: none;
-}
+
 .cart-item .cart-product button:hover {
   color: black;
 }
